app/assets/stylesheets/custom.css.scss
/* Variables */
$secondary-background: #EEEEEE;
$border-color: #CCCCCC;
$flamingo-pink: #FF0084;
$spacing: 10px;
$more-spacing: 20px;
$small-font-size: 12px;
$medium-font-size: 14px;
$large-font-size: 18px;

/* Shared Mixins */
@mixin ul-reset {
  margin: 0;
  list-style: none;
}

@mixin white-shadow-text {
  color: #FFFFFF;
  font-size: $medium-font-size;
  font-weight: bold;
  text-shadow: 1px 1px 1px rgba(0,0,0, 0.5);
}

/* Main */
body {
  font-family: 'Open Sans', 'Arial', sans-serif;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Lato', "Helvetica", sans-serif;
  margin: 0;
}

p {
  margin: 0;
}

.dark-background {
  background-color: $border-color;
}

.gold {
  color: #DAA520;
}

.nominatable:hover {
  color: #DAA505;
}

ul.bulleted li{
  list-style-type: circle;
  margin-left: 80px;
}

ul {
  margin: 0;
}

ul, li {
  text-decoration: none;
  list-style-type: none;
}

.comment-flag:hover {
  opacity: 0.6;
}

.flagged {
  color: #da4f49;
}

.comment {
  width: 100%;
  float: left;
  padding-left: 10px;
  padding-top: 10px;
  text-align: left;
  border-bottom: 1px solid #eee;
  border-top: 1px solid #fff;
  background-color: #f5f5f5
}

.comments {
  width: 100%;
  float: left;
  text-align: left;
  margin-bottom: 20px;
}

.comments * textarea {
  margin-left: 20px;
  width: 540px;
}
.comment-meta {
  margin-left: 10px;
  float: left;
  width: 500px;
}
.comments * img {
  float: left;
}
.company-toolbar
{
 color: white;
 margin-right: 20px;
}

.new-post {
  font-size: 12px;
  font-weight: bold;
  top: -10px;
}

.small-photo
{
  height: 200px;
}
#user-info-container
{
  float: none;
  display: inline-block;
  margin:0 auto;
  text-align: left;
}
#user-info-container > img
{
  margin-right: 20px;
}
#user-info-container > div > p
{
  margin-top: 5px;
  min-width: 250px;
}
.logo-thumb {
  max-width: 200px;
  max-height: 200px;
}

#logo-placeholder {
  width: 200px;
  min-height: 200px;
  max-height: 250px;
  margin-bottom: 20px;
  float: left;
  border: 1px solid $border-color;
  text-align: center;
  font-size: 64px;
  line-height: 200px;
  font-weight: bold;
  color: $border-color;
  background-color: #FFFFFF;
}

.company-content {
  margin-left: 220px;
  margin-bottom: 60px;
}

#add-company-logo {
  float: left
}

.modal h1 {
  margin-bottom: 20px;
}

.hero-unit {
  padding: 20px;
}

.nav-escape-above { padding-top: 40px;}

.large-header {
  font-size: 56px;
  margin-bottom: 10px;
}
.nav-push-down
{
  z-index: 1;
}

#company-splash-image
{
  margin-bottom: 40px;
  margin-top : -20px;
  width: 100%;
}

#splash-image-field
{
  display: none;
}

#company-header-image
{
  max-height: 400px;
  display: block;
}

.big-margin-top
{
  margin-top: 10%;
}

.select-new-image-container
{
  height: 150px;
  border-bottom: 4px dashed #777;
}
.image-medium {
  max-width: 400x;
  max-height: 400px;
}

.select-new-image-option
{
  margin-top: 20px;
  text-align: center;
}
.select-new-image-container-inner
{
  text-shadow: 0px 1px 1px #4d4d4d;
  color: #222;
  height: 50px;
  width: 50%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 10px;
  margin-bottom: 50px;
}

#opened-folder
{
  display: none;
}

#closed-folder
{

}

.file-loading
{
  display: none;
}

#loaded-image
{
  max-height: 100px
}

[contenteditable="true"]
{
  outline: none;
}

[contenteditable="true"]:hover
{
  outline: 3px dashed #0090D2;
  background-color: #fff;
  cursor: pointer;
}

.posts-container
{
  padding-top: 20px;
  background-color: white;
}
.posts-container-inv
{
  padding-top: 20px;
  background-color: #333333;
}

.nav-push-down > .navbar-inner{
  padding-top: 20px;
  padding-bottom: 20px;
  background: rgba(0,0,0,0.4)
}

.sub-header {
  font-size: 28px;
  margin-bottom: 10px;
}

.row {
  width: 1200px;
}

.navbar-inverse .brand {
  font-size: 20px;
  font-weight: bold;
  color: #FFFFFF;
  margin-right: 10px;
}

.navbar-inverse .companyName
{
  font-size: 15px;
  font-weight: bold;
  color: #f89406;
}

.navbar-inverse .navbar-link {
  color: #FFFFFF;
  font-size: 12px;
  font-weight: bold;
}

.navbar {
  margin-bottom: 0;
}

.navbar-inner {
  border-radius: 0px;
  padding: 0;
}

.nav {
  border-bottom: 10px;
}

.center-container{
  float: none;
  margin-left: auto;
  margin-right: auto;
}

.center {
  text-align: center;
}
/* Header View */
.navbar-text a {
  margin-right: 15px;
}

/* Home View */
#posts {
  float: none;
  margin: 0 auto;
}

.columns, .footer {
  width: 100%;
  margin-left: 0;
}

.footer {
  margin: 6px;
}

footer {
  padding: 20px;
  text-align: center;
  background-color: $secondary-background;
  border-top: 1px solid $border-color;
}

.glimpse-column {
  width: 250px;
  margin-left: 0;
  margin-right: 20px
}

.header-feature {
  visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
}

.header-inner {
  margin: 5px;
}

.glimpse {
  background-color: $secondary-background;
  width: 250px;
  margin: 0px 20px 20px 0px;
}

.glimpse a {
  text-decoration: none;
}

.inner-glimpse {
  position: relative;
  text-align: center;
  margin: 0 auto;
}

.hr-thin {
  margin: 10px 0;
}

a hr{
  text-decoration: none;
}

.rounded-top {
  -moz-border-radius-topright: 3px;
  -moz-border-radius-topleft: 3px;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

.subtle-shadow {
  -webkit-box-shadow: 2px 3px 5px 1px #999;
     -moz-box-shadow: 2px 3px 5px 1px #999;
          box-shadow: 2px 3px 5px 1px #999;
}

.pull-up {
  z-index: 100;
}
.outer-feature {
  visibility: hidden;
}

.inner-glimpse .outer-feature {
  margin: 0;
  position: absolute;
  width: 100%;
  display: block;
  background-color: #000000;
  opacity: 0.8;
  bottom: 0px;
  text-align: left;
}

.inner-glimpse .outer-feature .inner-feature {
  color: #FFFFFF;
  margin: 10px;
}

.inner-glimpse .outer-feature .inner-feature h4 {
  margin-right: 50px;
}

.vote {
  cursor: pointer;
}

.votes {
  float: right;
}

.votes .num-votes {
  font-weight: bold;
}
.wrap-text{
  word-wrap: break-word;
}

.glimpse-info {
  background-color: #FFFFFF;
  border: 1px solid $border-color;
  padding: 10px;
}

.delete-post {
  visibility: hidden;
}

.glimpse-info img {
  float: left;
}

.glimpse-meta {
  margin-left: 20px;
  font-size: 12px;
  float: left;
}

.glimpse-meta .content {
  display: block;
}

.glimpse-meta .author {
  font-weight: bold;
  display: block;
}

.glimpse-meta .date {
  font-weight: bold;
  float: right;
}

.clearfix {
  clear: both;
}

/* Login View */
.account-form {
  text-align: center;
  margin: 30px;
}

.account-form input[type="text"],
.account-form input[type="email"],
.account-form input[type="password"] {
  font-size: 18px;
  width: 300px;
  padding: 10px;
}

/* Dashboard View */
#filter-date {
  font-size: 16px;
  width: 350px;
}

h4.dashboard-sub {
  background-color: #444444;
  color: #FFFFFF;
  padding: 5px 10px;
  margin-bottom: 10px;
}

#dashboard-graph {
  padding: 20px;
  margin-bottom: 40px;
}

#dashboard-stats .total-votes {
  float: right;
}

.dashboard-row {
  font-size: 18px;
  padding: 10px 0;
  border-bottom: 1px solid $border-color;
}

.dashboard-header {
  border-bottom: 1px solid $border-color;
}

.dashboard-votes {
  text-align: right;
  padding-right: 5px;
}

.dashboard-elem {
  border: 1px solid $border-color;
  background-color: $secondary-background;
  padding: 10px;
  margin-bottom: 10px;
}

.dashboard-elem h3 {
  margin-bottom: 10px;
}

.dashboard-elem .top-user {
  position: relative;
  margin: 5px 5px 15px 5px;
  padding: 10px 10px 10px 70px;
  border: 1px solid $border-color;
  background-color: #DDDDDD;
}

.dashboard-elem .top-user img {
  position: absolute;
  top: 10px;
  left: 10px;
}

.block {
  display: block;
}

.top-user-name {
  font-size: 18px;
  font-weight: bold;
}

.num {
  font-size: 16px;
  font-weight: bold;
}

.uppercase {
  text-transform: uppercase;
}

.light-text {
  color: #777;
}

#summary span {
  font-size: 20px;
  display: block;
  line-height: 150%;
}

.col-header {
  font-size: 14px;
  text-transform: uppercase;
  font-weight: bold;
  color: #08c;
}

.axis {
  font-weight: bold;
}

.y {
  font-size: 20px;
}

.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.x.axis path {
  display: none;
}

.area {
  fill: lightsteelblue;
}

.line {
  fill: none;
  stroke: steelblue;
  stroke-width: 3px;
}

.grid .tick {
  stroke: lightgrey;
  opacity: 0.6;
}

.grid path {
  stroke-width: 0;
}

.tooltip {
  position: absolute;
  background-color: #FFFFFF;
  width: 100px;
  padding: 2px 5px;
  font-size: 12px;
  border: 3px solid steelblue;
  border-radius: 8px;
  pointer-events: none;
}

.tooltip .date {
  font-weight: bold;
}

circle {
  fill: white;
  stroke: steelblue;
  stroke-width: 3px;
}

#multiple-logo-panel img {
  border: 3px solid $border-color;
  margin: 10px;
}

#multiple-logo-panel img:hover {
  cursor: pointer;
  border: 3px solid #EEC900;
}

#multiple-logo-panel .selected {
  border: 3px solid #EEC900;
}

.alert-container {
  position: fixed;
  top: 50px;
  z-index: 999;
}

/* Discover Companies */
#discover-companies {
  $width: 900px;
  $height: 200px;
  $num-columns: 4;

  background-color: $secondary-background;
  display: none;

  #discover-companies-inner {
    width: $width;
    height: $height;
    padding: $more-spacing $spacing;
    margin: 0 auto;
  }

  .search {
    column-span: all;
    -moz-column-span: all;
    -webkit-column-span: all;
    margin-bottom: $spacing;
  }

  #discover-companies-search {
    width: $width;
  }

  .discover-companies-columns {
    columns: $num-columns;
    -moz-column-count: $num-columns;
    -webkit-column-count: $num-columns;

    column-gap: $spacing;
    -moz-column-gap: $spacing;
    -webkit-column-gap: $spacing;
  }

  ul {
    @include ul-reset;
  }

  li a {
    font-size: $small-font-size;
    font-weight: bold;
  }

}

.guide {
  margin-top: 30px;

  .guide-user {
    border-right: 1px solid $border-color;
    padding-right: 30px;
  }

  .guide-company {
    padding-left: 20px;
  }

  .header {
    text-align: center;
  }

  .step-container {
    margin: 20px 0;

    .step-header {
      margin: 10px 0;

      .step-number, .step-summary {
        font-size: 22px;
        font-weight: bold;
      }

      .step-summary {
        font-weight: 400;
      }
    }
  }
}

.faq-container {
  .faq-footer {
    margin-top: 30px;
  }
}

/* custom icons */

.myicon-untag {
  /* taken from bootstrap file */
  display: inline-block;
  width: 14px;
  height: 14px;
  line-height: 14px;
  vertical-align: text-top;
  background-image: url("/assets/icons/untag.png");
  background-size: 14px 14px;
  background-position: 14px 14px;
  margin-top: 1px;
}

/* Sticky Announcements */
#sticky-announcement {
  padding: $spacing;
  text-align: center;
  background-color: $flamingo-pink;
  box-shadow: inset 0 1px 8px rgba(0,0,0, 0.333);
  z-index: 9999;

  p {
    @include white-shadow-text;
  }

  a {
    text-decoration: underline;
  }
}

